<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="2dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:src="@drawable/ic_launcher_background"
                android:id="@+id/book_image"
                android:layout_centerHorizontal="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/book_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/book_name"
                android:id="@+id/book_name"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author_hello"
                android:textSize="16sp"
                android:id="@+id/author_name"
                android:layout_below="@+id/book_name"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publisher_name"
                android:textSize="16sp"
                android:id="@+id/publisher_name"
                android:layout_below="@+id/author_name"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_comedy"
                android:textSize="16sp"
                android:id="@+id/Category"
                android:layout_below="@+id/publisher_name"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average_rating_3_5"
                android:textSize="16sp"
                android:id="@+id/Average_Rating"
                android:layout_below="@+id/Category"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/page_count_250"
                android:textSize="16sp"
                android:id="@+id/Page_count"
                android:layout_below="@+id/Average_Rating"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/published_date_2030"
                android:textSize="16sp"
                android:id="@+id/published_date"
                android:layout_below="@+id/Page_count"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_hello"
                android:textSize="16sp"
                android:id="@+id/description"
                android:layout_below="@+id/published_date"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:scrollbars="vertical"
                />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>