<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linear"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/inputText"
            android:hint="@string/enter_isbn_number"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan"
            android:id="@+id/scan_btn"
            android:layout_marginStart="20dp"
            />
    </LinearLayout>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/submit_btn"
        android:text="@string/submit"
        />


</RelativeLayout>